--- a/part4/package.json
+++ b/part4/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../part2 && npm run build && cp -r build ../part3",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-    "lint":"eslint ."
+    "lint": "eslint .",
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Emilie Zhang",
   "license": "MIT",
@@ -23,6 +23,10 @@
   "devDependencies": {
     "eslint": "^8.47.0",
     "eslint-plugin-react": "^7.33.1",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
