--- a/part4/package.json
+++ b/part4/package.json
@@ -24,7 +24,8 @@
     "eslint": "^8.47.0",
     "eslint-plugin-react": "^7.33.1",
     "jest": "^29.6.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "testEnvironment": "node"
