--- a/part4/package.json
+++ b/part4/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node index.js",
-    "build:ui": "rm -rf build && cd ../part2 && npm run build && cp -r build ../part3",
+    "build:ui": "rm -rf dist && cd ../part5 && npm run build && cp -r dist ../part4",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "lint": "eslint .",
     "test": "NODE_ENV=test jest --verbose --runInBand"
