--- a/part4/package.json
+++ b/part4/package.json
@@ -9,7 +9,8 @@
     "build:ui": "rm -rf dist && cd ../part5 && npm run build && cp -r dist ../part4",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "lint": "eslint .",
-    "test": "NODE_ENV=test jest --verbose --runInBand"
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "NODE_ENV=test node index.js"
   },
   "author": "Emilie Zhang",
   "license": "MIT",
