--- a/part7/webpack/package.json
+++ b/part7/webpack/package.json
@@ -2,7 +2,9 @@
   "name": "webpack",
   "version": "0.0.1",
   "description": "practising webpack",
-  "scripts": {},
+  "scripts": {
+    "build": "webpack --mode=development"
+  },
   "license": "MIT",
   "devDependencies": {
     "webpack": "^5.88.2",
