--- a/part7/webpack/package.json
+++ b/part7/webpack/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "webpack": "^5.88.2",
