--- a/part7/webpack/package.json
+++ b/part7/webpack/package.json
@@ -4,7 +4,8 @@
   "description": "practising webpack",
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "webpack serve --mode=development"
+    "start": "webpack serve --mode=development",
+    "server": "json-server -p3001 --watch db.json"
   },
   "license": "MIT",
   "devDependencies": {
@@ -13,12 +14,14 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "json-server": "^0.17.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "core-js": "^3.32.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
