--- a/part7/webpack/package.json
+++ b/part7/webpack/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "core-js": "^3.32.1",
+    "promise-polyfill": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "regenerator-runtime": "^0.14.0"
