--- a/part9/flight-diaries/package.json
+++ b/part9/flight-diaries/package.json
@@ -2,7 +2,7 @@
   "name": "flight-diaries",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "tsc": "tsc",
     "dev": "ts-node-dev src/index.ts",
